--- a/prog-alapok-java/pom.xml
+++ b/prog-alapok-java/pom.xml
@@ -15,6 +15,12 @@
     </properties>
 
     <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>5.10.2</version>
+                <scope>test</scope>
+            </dependency>
         <!--********| Jakarta Validation  |********-->
 
         <!-- Interface -->
@@ -53,6 +59,12 @@
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.el</artifactId>
             <version>4.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
